--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Das Faddaden und Maller Team." />
+
+
+  <meta property="og:title" content="Yadera GmbH" />
+  <meta property="og:description" content="Das Faddaden und Maller Team." />
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+  <meta property="og:url" content="https://martynakiljan.github.io/yadera/" />
+  <meta property="og:type" content="website" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
